# trend-lab-bountymatch-copilot-260531

./: README.md  pyproject.toml
src/bountymatch_copilot/: main.py
tests/: test_smoke.py
