[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "bountymatch-copilot"
version = "0.1.0"
description = "CLI starter for finding and ranking OSS bounties"
readme = "README.md"
requires-python = ">=3.11"
authors = [{ name = "BountyMatch Copilot" }]
dependencies = []

[project.scripts]
bountymatch = "bountymatch_copilot.main:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
pythonpath = ["src"]
